// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withImage(BaseComponent): NewComponent start with default props waiting for user to select any image 1`] = `
<div
  name="PropsDisplayer"
>
  <ReactComponent
    cropping={false}
    failed={false}
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    scale={1}
    setEditor={[Function]}
    setImage={[Function]}
    setScale={[Function]}
    uploaded={false}
    uploading={false}
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with image preset cropping image 1`] = `
<div
  name="PropsDisplayer"
>
  <ReactComponent
    cropping={true}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    scale={1}
    setEditor={[Function]}
    setImage={[Function]}
    setScale={[Function]}
    uploaded={false}
    uploading={false}
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with image preset failed to upload image 1`] = `
<div
  name="PropsDisplayer"
>
  <ReactComponent
    cropping={true}
    failed={true}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    scale={1}
    setEditor={[Function]}
    setImage={[Function]}
    setScale={[Function]}
    uploaded={false}
    uploading={false}
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with image preset succeeded to upload image 1`] = `
<div
  name="PropsDisplayer"
>
  <ReactComponent
    cropping={false}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    scale={1}
    setEditor={[Function]}
    setImage={[Function]}
    setScale={[Function]}
    uploaded={true}
    uploading={false}
    url="http://pic.example.com/200/200"
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with image preset uploading image 1`] = `
<div
  name="PropsDisplayer"
>
  <ReactComponent
    cropping={true}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    scale={1}
    setEditor={[Function]}
    setImage={[Function]}
    setScale={[Function]}
    uploaded={false}
    uploading={true}
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with url preset cropping url 1`] = `
<div
  name="PropsDisplayer"
>
  <ReactComponent
    cropping={true}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    scale={1}
    setEditor={[Function]}
    setImage={[Function]}
    setScale={[Function]}
    uploaded={false}
    uploading={false}
    url="http://pic.example.com/200/200"
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with url preset previewing url 1`] = `
<div
  name="PropsDisplayer"
>
  <ReactComponent
    cropping={false}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    scale={1}
    setEditor={[Function]}
    setImage={[Function]}
    setScale={[Function]}
    uploaded={true}
    uploading={false}
    url="http://pic.example.com/200/200"
  />
</div>
`;
